# learning-conan-1-logger

./: CMakeLists.txt  README.md  conanfile.py  configure.py  logger-test.cpp
src/: CMakeLists.txt  logger.cpp
src/cmake/: loggerConfig.cmake.in
test/: CMakeLists.txt  unittest.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
